--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>braccs</groupId>
-	<artifactId>cattlecontrol</artifactId>
+	<artifactId>gadocontrol</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>cattlecontrol</name>
-	<description>Cattle Control by Braccs</description>
+	<name>gadocontrol</name>
+	<description>Gado Control by Braccs</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
